# FrontEndTools

./: .eslintignore  .eslintrc.json  .gitmodules  .prettierrc  FETool.code-workspace  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  README.md  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/picture/: base_image.rs  mod.rs
src-tauri/src/system/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: mod.ts
src/components/ckBtn/: index.vue
src/components/svger/: index.vue
src/hooks/: lifeCycle.ts  messageTip.ts  mod.ts  useDefault.ts  watchWidth.ts
src/interface/: System.ts
src/invoke/: mod.ts
src/layout/: index.vue
src/page/color/fastCompute/: index.vue
src/page/color/recommend/: inde.vue
src/page/css/changeGradually/: index.vue
src/page/css/glass/: index.vue
src/page/css/shadow/: index.vue
src/page/curl/: index.vue
src/page/gpt/: index.vue
src/page/home/: index.vue
src/page/navigation/: index.vue
src/page/other/diff/: index.vue
src/page/picture/: index.vue
src/page/regExp/: index.vue
src/page/time/: index.vue
src/page/todoList/: dialog.vue  index.vue
src/page/toolbar/: index.vue
src/page/translate/: index.vue
src/router/: after.ts  before.ts  mod.ts  routes.ts
src/style/: cmomond.scss  reset.scss  theme.scss
src/utils/: addDrag.ts  debounce_throttle.ts  elementAnimation.ts  mod.ts  stopBrowser.ts  tauriHttp.ts
src/utils/FE/: Option.ts  Result.ts  mod.ts
(+4 files in other folders)
