[package]
name = "front_end_tools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-always-on-top", "window-create", "path-all",
  "clipboard-all",
  "window-set-fullscreen",
  "window-maximize",
  "window-center",
  "dialog-all",
  "window-start-dragging",
  "window-close",
  "window-minimize",
  "shell-open",
  "window-hide",
  "macos-private-api",
] }

image = "0.24.7"
base64 = "0.21.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.0"
window-shadows = "0.2.1"
image-base64 = "0.1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
